--- a/Pipfile
+++ b/Pipfile
@@ -4,28 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-alembic = "1.8.1"
-attrs = "22.1.0"
-click = "8.1.3"
-faker = "14.2.0"
-flask = "2.2.2"
-flask-migrate = "3.1.0"
-flask-sqlalchemy = "2.5.1"
-iniconfig = "1.1.1"
-itsdangerous = "2.1.2"
-jinja2 = "3.1.2"
-mako = "1.2.2"
-markupsafe = "2.1.1"
-packaging = "21.3"
-pluggy = "1.0.0"
-py = "1.11.0"
-pyparsing = "3.0.9"
+Faker = "14.2.0"
+Flask = "2.2.2"
+Flask-Migrate = "3.1.0"
+Flask-SQLAlchemy = "2.5.1"
+importlib-resources = "5.10.0"
+ipdb = "0.13.9"
 pytest = "7.1.3"
-python-dateutil = "2.8.2"
-six = "1.16.0"
-sqlalchemy = "1.4.41"
-tomli = "2.0.1"
-werkzeug = "2.2.2"
 
 [requires]
-python_version = "3.8.13"
+python_full_version = "3.8.13"
